--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,7 @@ mongoengine==0.27.0
 mongomock==4.1.2
 numpy==2.2.5
 packaging==23.1
+pandas==2.2.3
 Pillow==10.1.0
 pluggy==1.3.0
 pymongo==4.0.2
@@ -37,11 +38,13 @@ pytest==7.4.1
 pytest-flask==1.2.0
 python-dateutil==2.9.0.post0
 python-dotenv==0.19.2
+pytz==2025.2
 requests==2.27.1
 sentinels==1.0.0
 six==1.17.0
 soupsieve==2.5
 tomli==2.0.1
+tzdata==2025.2
 urllib3==1.26.9
 waitress==2.1.2
 Werkzeug==2.0.3
